What's New
- Fixed an issue causing the wrong talent spell link to be printed when the second choice in selection nodes was chosen.